# Kasbah-site

./: .gitignore  README.md  dev.html  index.html  manifest.webmanifest  style.css
downloads/: KasbahGuard-macOS.dmg
functions/api/: consume.js  demo.js  join.js
kasbah-guard-dist/apps/desktop/: index.html  install.command  package.json
kasbah-guard-dist/apps/desktop/src/: index.html
kasbah-guard-dist/apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
kasbah-guard-dist/apps/desktop/src-tauri/extension/: popup.html
kasbah-guard-dist/apps/desktop/src-tauri/extension/src/: content.js  styles.css
kasbah-guard-dist/apps/desktop/src-tauri/src/: guard.rs  main.rs
kasbah-guard-dist/extensions/chrome/: background.js  manifest.json
kasbah-guard-dist/extensions/chrome/src/: content.js
public/: _headers  app.js  dev.html  index.html  manifest.webmanifest  style.css  sw.js
public/downloads/: KasbahGuard-macOS.dmg  install.command
